# MEG-GPT

./: .gitignore  LICENSE  README.md  pyproject.toml
egpt/: __init__.py
egpt/data/: simulation.py
egpt/modules/: README.md
egpt/training/: README.md
egpt/utils/: README.md  array_ops.py  post_hoc.py  processing.py
envs/: bmrc.yml  egpt.yml  env.yml  env_builds.yml  env_minimal.yml  meg-gpt.yml
ephys_gpt/configs/: __init__.py  config.py
ephys_gpt/data/: dataloader.py  datasets.py  simulation.py
ephys_gpt/inference/: generator.py
ephys_gpt/models/: __init__.py  embeddings.py  ephys_gpt.py  utils.py
ephys_gpt/models/decoder/: attention.py  transformer_decoder.py
ephys_gpt/optim/: callbacks.py  initializer.py  losses.py  optimizer.py
ephys_gpt/utils/: post_hoc.py  processing.py  sampling.py  spatial.py
examples/camcan/: 01_train_tokenizer.py  02_tokenize_data.py
examples/camcan/models/tokenizer/: config.yaml
examples/simulations/: 01_simulate_data.py  02_train_tokenizer.py  03_train_ephys_gpt.py  03_train_meg_gpt.py  04_generate_data.py  05_plot_results.py
examples/simulations/models/generator/: config.yaml
meg_gpt/: __init__.py  typing.py
meg_gpt/configs/: __init__.py  config.py
meg_gpt/data/: dataloader.py  datasets.py  simulation.py
meg_gpt/inference/: generator.py
meg_gpt/models/: __init__.py  embeddings.py  meg_gpt.py  utils.py
meg_gpt/models/decoder/: transformer_decoder.py
meg_gpt/optim/: callbacks.py  losses.py
meg_gpt/utils/: plotting.py  post_hoc.py  processing.py  spatial.py
models/tokenizer/: config.yaml  model_state.pt  vocab.pkl
src/ephys_gpt/data/: base.py  rw.py
src/ephys_gpt/layers/: core.py  positional.py  tokenization.py
(+1 files in other folders)
