# Configuration file for packaging

[project]
name = "EphysGPT"
version = "0.0.1"
authors = [
  { name = "SungJun Cho", email = "sungjun.cho@ndcn.ox.ac.uk" },
  { name = "Chetan Gohil", email = "chetan.gohil@psych.ox.ac.uk" },
  { name = "Mark Woolrich", email = "mark.woolrich@ohba.ox.ac.uk" },
]
description = "Foundation models for non-invasive human electrophysiology data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "scikit-learn",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ephys_gpt"]

[project.urls]
Homepage = "https://github.com/OHBA-analysis/EphysGPT"
Issues = "https://github.com/OHBA-analysis/EphysGPT/issues"
